--- a/example/src/main/res/layout/monthly_report_layout.xml
+++ b/example/src/main/res/layout/monthly_report_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -15,46 +14,49 @@
         android:id="@+id/const_itemLayout">
 
         <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
+            android:id="@+id/monthYear"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             android:text="29/06/2020"
             app:layout_constraintStart_toStartOf="parent"
             android:textColor="@android:color/black"
-            android:textSize="14sp"/>
+            android:textSize="12sp"/>
 
         <TextView
-            android:id="@+id/product_name"
-            android:layout_width="wrap_content"
+            android:id="@+id/sales"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="T-Shirt"
-            app:layout_constraintStart_toEndOf="@+id/date"
-            app:layout_constraintEnd_toStartOf="@+id/quantity"
+            android:textSize="12sp"
+            android:text="1,000,000"
+            android:textAlignment="textEnd"
+            app:layout_constraintStart_toEndOf="@+id/monthYear"
+            app:layout_constraintEnd_toStartOf="@+id/purchases"
             android:textColor="@android:color/black"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/quantity"
-            android:layout_width="wrap_content"
+            android:id="@+id/purchases"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="100"
-            app:layout_constraintStart_toEndOf="@+id/product_name"
-            app:layout_constraintEnd_toStartOf="@+id/amount"
+            android:text="1,000,000"
+            android:textAlignment="textEnd"
+            app:layout_constraintStart_toEndOf="@+id/sales"
+            app:layout_constraintEnd_toStartOf="@+id/profit"
             android:textColor="@android:color/black"
-            android:textSize="14sp"/>
+            android:textSize="12sp"/>
 
         <TextView
-            android:id="@+id/amount"
-            android:layout_width="wrap_content"
+            android:id="@+id/profit"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="12sp"
+            android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@android:color/black"
-            android:text="20,000"/>
+            android:text="1,000,000"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
