--- a/example/src/main/res/layout/fragment_home.xml
+++ b/example/src/main/res/layout/fragment_home.xml
@@ -1,143 +1,246 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    android:layout_height="match_parent">
 
-    <EditText
-        android:layout_width="170dp"
-        android:layout_height="50dp"
-        android:hint="Today's date"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"/>
-
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:cardCornerRadius="15dp">
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
+            tools:context=".ui.home.HomeFragment">
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="40dp"
-                android:src="@drawable/daily_sells"/>
+            <EditText
+                android:id="@+id/datepicker"
+                android:layout_width="170dp"
+                android:layout_height="50dp"
+                android:hint="Today's date"
+                android:focusable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="10dp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Summary"
-                android:layout_marginStart="10dp"
-                android:layout_gravity="center_vertical"
-                android:textSize="25sp" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="70dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:cardCornerRadius="15dp">
 
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/daily_sells"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Daily Summary"
+                        android:layout_marginStart="10dp"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="70dp"
+                    android:orientation="vertical"
+                    android:paddingStart="40dp"
+                    android:paddingEnd="40dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Sales"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/sales"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="500,000 Tshs"
+                            android:textSize="15sp"
+                            android:layout_gravity="end"
+                            android:layout_alignParentEnd="true"
+                            android:textColor="@android:color/black"/>
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Purchases"
+                            android:textSize="16sp"/>
+
+                        <TextView
+                            android:id="@+id/purchases"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="120,000 Tshs"
+                            android:textSize="15sp"
+                            android:layout_gravity="end"
+                            android:layout_alignParentEnd="true"
+                            android:textColor="@android:color/black"/>
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="15dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Profit"
+                            android:textSize="16sp"/>
+
+                        <TextView
+                            android:id="@+id/profit"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="380,000 Tshs"
+                            android:textSize="15sp"
+                            android:layout_gravity="end"
+                            android:layout_alignParentEnd="true"
+                            android:textColor="@android:color/black"/>
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:orientation="vertical"
-            android:paddingStart="40dp"
-            android:paddingEnd="40dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal"
                 android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/daily_sells"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Monthly Summary"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="20sp"/>
+
+            </LinearLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="12dp"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:paddingBottom="12dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/colorPrimary"
+                android:id="@+id/const_itemLayout">
+
+                <TextView
+                    android:id="@+id/monthYear"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="MM/YYYY"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"/>
+
+                <TextView
+                    android:id="@+id/salesH"
+                    android:layout_width="75dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
                     android:text="Sales"
-                    android:textSize="16sp" />
+                    android:textAlignment="textEnd"
+                    app:layout_constraintStart_toEndOf="@+id/monthYear"
+                    app:layout_constraintEnd_toStartOf="@+id/purchasesH"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/purchasesH"
+                    android:layout_width="70dp"
                     android:layout_height="wrap_content"
-                    android:text="500,000 Tshs"
-                    android:textSize="15sp"
-                    android:layout_gravity="end"
-                    android:layout_alignParentEnd="true"
-                    android:textColor="@android:color/black"/>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
                     android:text="Purchases"
-                    android:textSize="16sp"/>
+                    android:textAlignment="textEnd"
+                    app:layout_constraintStart_toEndOf="@+id/salesH"
+                    app:layout_constraintEnd_toStartOf="@+id/profitH"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/profitH"
+                    android:layout_width="70dp"
                     android:layout_height="wrap_content"
-                    android:text="120,000 Tshs"
-                    android:textSize="15sp"
-                    android:layout_gravity="end"
-                    android:layout_alignParentEnd="true"
-                    android:textColor="@android:color/black"/>
+                    android:textSize="14sp"
+                    android:textAlignment="textEnd"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textColor="@android:color/white"
+                    android:text="Profit"/>
 
-            </RelativeLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <RelativeLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Profit"
-                    android:textSize="16sp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="380,000 Tshs"
-                    android:textSize="15sp"
-                    android:layout_gravity="end"
-                    android:layout_alignParentEnd="true"
-                    android:textColor="@android:color/black"/>
-
-            </RelativeLayout>
+                android:layout_height="match_parent"/>
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="20dp"
-        android:text="Copyright @ 2020"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
