--- a/example/src/main/res/layout/fragment_products.xml
+++ b/example/src/main/res/layout/fragment_products.xml
@@ -30,51 +30,53 @@
                 android:id="@+id/const_itemLayout">
 
                 <TextView
-                    android:id="@+id/date"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/sn"
+                    android:layout_width="30dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:text="Date"
+                    android:text="SN"
                     app:layout_constraintStart_toStartOf="parent"
                     android:textColor="@android:color/white"
                     android:textSize="14sp"/>
 
                 <TextView
                     android:id="@+id/product_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:text="Product name"
-                    app:layout_constraintStart_toEndOf="@+id/date"
-                    app:layout_constraintEnd_toStartOf="@+id/quantity"
-                    android:textColor="@android:color/white"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
-                <TextView
-                    android:id="@+id/quantity"
-                    android:layout_width="wrap_content"
+                    android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:text="Quantity"
-                    app:layout_constraintStart_toEndOf="@+id/product_name"
-                    app:layout_constraintEnd_toStartOf="@+id/amount"
+                    android:text="Product name"
+                    app:layout_constraintEnd_toStartOf="@+id/quantity"
+                    app:layout_constraintStart_toEndOf="@+id/sn"
                     android:textColor="@android:color/white"
                     android:textSize="14sp"/>
 
                 <TextView
-                    android:id="@+id/amount"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/quantity"
+                    android:layout_width="55dp"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
+                    android:text="Available"
+                    android:textAlignment="textEnd"
+                    app:layout_constraintStart_toEndOf="@+id/product_name"
+                    app:layout_constraintEnd_toStartOf="@+id/barcode"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <TextView
+                    android:id="@+id/barcode"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textAlignment="textEnd"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:textColor="@android:color/white"
-                    android:text="Amount"/>
+                    android:text="Barcode"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+                android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/const_itemLayout"/>
