--- a/example/src/main/res/layout/product_layout.xml
+++ b/example/src/main/res/layout/product_layout.xml
@@ -7,7 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingTop="15dp"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
@@ -15,46 +15,48 @@
         android:id="@+id/const_itemLayout">
 
         <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
+            android:id="@+id/sn"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="29/06/2020"
+            android:text="SN"
             app:layout_constraintStart_toStartOf="parent"
             android:textColor="@android:color/black"
             android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/product_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="T-Shirt"
-            app:layout_constraintStart_toEndOf="@+id/date"
-            app:layout_constraintEnd_toStartOf="@+id/quantity"
-            android:textColor="@android:color/black"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <TextView
-            android:id="@+id/quantity"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="100"
-            app:layout_constraintStart_toEndOf="@+id/product_name"
-            app:layout_constraintEnd_toStartOf="@+id/amount"
+            android:text="Product name"
+            app:layout_constraintEnd_toStartOf="@+id/quantity"
+            app:layout_constraintStart_toEndOf="@+id/sn"
             android:textColor="@android:color/black"
             android:textSize="14sp"/>
 
         <TextView
-            android:id="@+id/amount"
-            android:layout_width="wrap_content"
+            android:id="@+id/quantity"
+            android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:textSize="14sp"
+            android:text="Quantity"
+            android:textAlignment="textEnd"
+            app:layout_constraintStart_toEndOf="@+id/product_name"
+            app:layout_constraintEnd_toStartOf="@+id/barcode"
+            android:textColor="@android:color/black"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:id="@+id/barcode"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@android:color/black"
-            android:text="20,000"/>
+            android:text="Barcode"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
