--- a/example/src/main/res/menu/activity_main_drawer.xml
+++ b/example/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/ic_baseline_add_box_24"
             android:title="@string/menu_register" />
         <item
+            android:id="@+id/nav_products"
+            android:icon="@drawable/ic_baseline_apps_24"
+            android:title="@string/menu_products" />
+        <item
             android:id="@+id/nav_sales"
             android:icon="@drawable/ic_baseline_local_grocery_store_24"
             android:title="@string/menu_sales" />
