--- a/example/src/main/res/layout/app_bar_main.xml
+++ b/example/src/main/res/layout/app_bar_main.xml
@@ -48,6 +48,30 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/purchase_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:backgroundTint="@color/colorPrimary"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@android:drawable/ic_input_add"/>
+
+        <TextView
+            android:id="@+id/purchase_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:elevation="15dp"
+            android:textColor="@android:color/white"
+            android:layout_marginTop="10dp"/>
+
+    </RelativeLayout>
+
 <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
 <!--        android:id="@+id/register_scan_fab"-->
 <!--        android:layout_width="wrap_content"-->
